force-app/main/default/objects/LLC_BI__Product_Connection__c/fields/LLC_BI__Child_Product_Reference__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Child_Product_Reference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Product Reference</label>
    <referenceTo>LLC_BI__Product__c</referenceTo>
    <relationshipLabel>Product Connections (Child Product Reference)</relationshipLabel>
    <relationshipName>Product_Connections1</relationshipName>
    <type>Lookup</type>
</CustomField>