force-app/main/default/objects/LLC_BI__Product_Connection__c/fields/LLC_BI__Is_Required__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use this flag for bundles only to mark which products are required in a bundle</description>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>