force-app/main/default/objects/LLC_BI__Product_Connection__c/fields/LLC_BI__Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bundle</fullName>
            </value>
            <value>
                <fullName>Dependency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>